--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>ATCC – Automated Promo Video Creator</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="p:domain_verify" content="fa33726eef68a4b2d321b98a1c638686"/>
   <style>
     body { font-family: Arial, sans-serif; line-height: 1.6; margin: 2rem; }
     header { text-align: center; }
